@startuml ERD_Increment_1

title Entity Relationship Diagram — Increment 1: Modul Inti Operasional\nSistem Manajemen Bisnis Pawon3D

skinparam linetype ortho
hide empty methods
skinparam EntityBackgroundColor White
skinparam EntityBorderColor DarkSlateGray

' ==================== ENTITIES ====================

entity "users" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(50)
  email : VARCHAR(255) <<UNIQUE>>
  phone : VARCHAR(20)
  password : VARCHAR
  image : VARCHAR
  gender : VARCHAR(20)
  is_active : BOOLEAN
  invitation_token : VARCHAR(64)
  invitation_sent_at : TIMESTAMP
  activated_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "categories" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(50)
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "units" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(20) <<UNIQUE>>
  alias : VARCHAR(10)
  group : VARCHAR(20)
  base_unit_id : UUID <<FK>>
  conversion_factor : DECIMAL(20,10)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "ingredient_categories" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(100)
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "ingredient_category_details" {
  * id : UUID <<PK>>
  --
  ingredient_category_id : UUID <<FK>>
  material_id : UUID <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "materials" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(100)
  description : VARCHAR(255)
  image : VARCHAR
  expiry_date : DATE
  status : VARCHAR(50)
  is_active : BOOLEAN
  is_recipe : BOOLEAN
  minimum : DECIMAL(15,5)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "material_details" {
  * id : UUID <<PK>>
  --
  material_id : UUID <<FK>>
  unit_id : UUID <<FK>>
  is_main : BOOLEAN
  quantity : DECIMAL(15,5)
  supply_quantity : DECIMAL(15,5)
  supply_price : DECIMAL(10,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "material_batches" {
  * id : UUID <<PK>>
  --
  material_id : UUID <<FK>>
  unit_id : UUID <<FK>>
  batch_number : VARCHAR(50)
  date : DATE
  batch_quantity : DECIMAL(15,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "suppliers" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(100)
  description : VARCHAR(255)
  contact_name : VARCHAR(50)
  phone : VARCHAR(20)
  street : VARCHAR(255)
  landmark : VARCHAR(200)
  maps_link : VARCHAR(500)
  image : VARCHAR
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "expenses" {
  * id : UUID <<PK>>
  --
  expense_number : VARCHAR(50) <<UNIQUE>>
  expense_date : DATE
  end_date : DATE
  supplier_id : UUID <<FK>>
  note : TEXT
  status : VARCHAR(50)
  grand_total_expect : DECIMAL(10,2)
  grand_total_actual : DECIMAL(10,2)
  is_start : BOOLEAN
  is_finish : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "expense_details" {
  * id : UUID <<PK>>
  --
  expense_id : UUID <<FK>>
  material_id : UUID <<FK>>
  unit_id : UUID <<FK>>
  quantity_expect : DECIMAL(15,5)
  quantity_get : DECIMAL(15,5)
  is_quantity_get : BOOLEAN
  price_expect : DECIMAL(10,2)
  price_get : DECIMAL(10,2)
  total_expect : DECIMAL(10,2)
  total_actual : DECIMAL(10,2)
  expiry_date : DATE
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "products" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(50)
  description : VARCHAR(255)
  price : DECIMAL(10,0)
  stock : DECIMAL(10,0)
  method : JSON
  product_image : VARCHAR(255)
  is_recipe : BOOLEAN
  is_active : BOOLEAN
  is_recommended : BOOLEAN
  is_other : BOOLEAN
  pcs : DECIMAL(10,0)
  pcs_capital : DECIMAL(10,0)
  capital : DECIMAL(10,0)
  suhu_ruangan : DECIMAL(3,0)
  suhu_dingin : DECIMAL(3,0)
  suhu_beku : DECIMAL(3,0)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "product_categories" {
  * id : UUID <<PK>>
  --
  product_id : UUID <<FK>>
  category_id : UUID <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "product_compositions" {
  * id : UUID <<PK>>
  --
  product_id : UUID <<FK>>
  material_id : UUID <<FK>>
  unit_id : UUID <<FK>>
  material_quantity : DECIMAL(8,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "type_costs" {
  * id : UUID <<PK>>
  --
  name : VARCHAR(100)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "other_costs" {
  * id : UUID <<PK>>
  --
  product_id : UUID <<FK>>
  type_cost_id : UUID <<FK>>
  price : DECIMAL(15,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "customers" {
  * id : UUID <<PK>>
  --
  phone : VARCHAR(20) <<UNIQUE>>
  name : VARCHAR(50)
  points : DECIMAL(9,0)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "shifts" {
  * id : UUID <<PK>>
  --
  shift_number : VARCHAR(50) <<UNIQUE>>
  opened_by : UUID <<FK>>
  closed_by : UUID <<FK>>
  start_time : DATETIME
  end_time : DATETIME
  status : VARCHAR(50)
  initial_cash : DECIMAL(10,0)
  final_cash : DECIMAL(10,0)
  total_sales : DECIMAL(10,2)
  total_refunds : DECIMAL(10,2)
  total_discounts : DECIMAL(10,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "transactions" {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  customer_id : UUID <<FK>>
  invoice_number : VARCHAR(30) <<UNIQUE>>
  name : VARCHAR(50)
  phone : VARCHAR(20)
  date : DATE
  time : TIME
  start_date : DATE
  end_date : DATE
  note : TEXT
  payment_status : VARCHAR(20)
  status : VARCHAR(20)
  method : VARCHAR(20)
  total_amount : DECIMAL(15,0)
  points_used : INTEGER
  points_discount : DECIMAL(15,2)
  total_refund : DECIMAL(15,0)
  cancel_reason : TEXT
  cancel_proof_image : VARCHAR
  created_by_shift : UUID <<FK>>
  refund_by_shift : UUID <<FK>>
  cancelled_by_shift : UUID <<FK>>
  cancelled_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "transaction_details" {
  * id : UUID <<PK>>
  --
  transaction_id : UUID <<FK>>
  product_id : UUID <<FK>>
  quantity : SMALLINT
  price : DECIMAL(15,0)
  refund_quantity : SMALLINT
  pcs_capital_snapshot : DECIMAL(15,2)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "productions" {
  * id : UUID <<PK>>
  --
  production_number : VARCHAR(50)
  transaction_id : UUID <<FK>>
  method : VARCHAR(50)
  date : DATE
  time : TIME
  start_date : DATE
  end_date : DATE
  note : TEXT
  status : VARCHAR(50)
  is_start : BOOLEAN
  is_finish : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "production_details" {
  * id : UUID <<PK>>
  --
  production_id : UUID <<FK>>
  product_id : UUID <<FK>>
  quantity_plan : DECIMAL(8,0)
  quantity_get : DECIMAL(8,0)
  quantity_fail : DECIMAL(8,0)
  cycle : DECIMAL(2,0)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "production_workers" {
  * id : UUID <<PK>>
  --
  production_id : UUID <<FK>>
  user_id : UUID <<FK>>
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "notifications" {
  * id : UUID <<PK>>
  --
  user_id : UUID <<FK>>
  title : VARCHAR(100)
  body : TEXT
  type : VARCHAR(100)
  is_read : BOOLEAN
  status : TINYINT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' ==================== RELATIONS ====================

units |o--o{ units : "basis untuk\n(base_unit_id)"
units ||--o{ material_details : "digunakan di"
units ||--o{ material_batches : "digunakan di"
units ||--o{ product_compositions : "digunakan di"
units ||--o{ expense_details : "digunakan di"

materials ||--o{ material_details : "memiliki detail"
materials ||--o{ material_batches : "memiliki batch"
materials ||--o{ product_compositions : "digunakan di"
materials ||--o{ expense_details : "dibeli"
materials ||--o{ ingredient_category_details : "dikategori"

ingredient_categories ||--o{ ingredient_category_details : "memiliki"

suppliers ||--o{ expenses : "mensupplai"
expenses ||--o{ expense_details : "memiliki item"

categories ||--o{ product_categories : "untuk"
products ||--o{ product_categories : "memiliki"
products ||--o{ product_compositions : "memiliki komposisi"
products ||--o{ other_costs : "memiliki biaya"
products ||--o{ transaction_details : "dijual di"
products ||--o{ production_details : "diproduksi di"

type_costs ||--o{ other_costs : "digunakan di"

customers ||--o{ transactions : "melakukan"
users ||--o{ shifts : "membuka/menutup"
users ||--o{ transactions : "membuat"
users ||--o{ production_workers : "terlibat di"
users ||--o{ notifications : "menerima"

shifts ||--o{ transactions : "dalam shift"
transactions ||--o{ transaction_details : "memiliki item"
transactions ||--o{ productions : "memicu"

productions ||--o{ production_details : "memiliki detail"
productions ||--o{ production_workers : "dikerjakan oleh"

@enduml
